--- a/Events.html
+++ b/Events.html
@@ -81,7 +81,7 @@
                         <td><img src="image/HWP-11-9-14-flyer.jpg" alt="Masked Mania"></td>
                     </tr>
                     <tr>
-                        <td><p>La historia de la Lucha mexicana está entrelazada  de México, los medios de comunicación y el entretenimiento en general. Su siguiente, en México se ha convertido en el deporte más popular después del fútbol en un país .</p></td>
+                        <td><p>Lucha Libre , que se traduce vagamente a "Free Fight" en Inglés , combina acción , color, mística y generaciones de tradición de presentar un producto que no se ve en la corriente principal de lucha libre americana.</p></td>
                     </tr>
                 </tbody>
             </table>
@@ -106,7 +106,7 @@
                         <td><img src="image/FCW-LA.jpg" alt="Masked Mania" ></td>
                     </tr>
                     <tr>
-                        <td><p>público estadounidense a los de alto vuelo se mueve, explosivos de la lucha libre. Una antigua tradición de combate, ver como el bien y el mal hacer la guerra en un campo de batalla valiente llamado "El Templo" estadounidense.</p></td>
+                        <td><p>Lucha Libre , que se traduce vagamente a "Free Fight" en Inglés , combina acción , color, mística y generaciones de tradición de presentar un producto que no se ve en la corriente principal de lucha libre americana.</p></td>
                     </tr>
                 </tbody>
             </table>
@@ -131,24 +131,24 @@
                         <td><img src="image/lucha-libre-pro-wrestling-11.14.15.jpg" alt="Masked Mania" ></td>
                     </tr>
                     <tr>
-                        <td><p> del viernes noche de la pelea en la Arena México. Este local de larga data en el centro de Ciudad de México es el lugar para ver uno de los eventos deportivos más estridentes y dramáticos del país estadounidense, la lucha libre.</p></td>
+                        <td><p>Lucha Libre , que se traduce vagamente a "Free Fight" en Inglés , combina acción , color, mística y generaciones de tradición de presentar un producto que no se ve en la corriente principal de lucha libre americana.</p></td>
                     </tr>
                 </tbody>
             </table>
         </main>
 
-<<<<<<< HEAD
+
     <!--texte de la page events -->
-        <aside>
-            <p>Events</p>
-        </aside>
-=======
+        <!--<aside>-->
+            <!--<p>Events</p>-->
+        <!--</aside>-->
+
 </main>
 <!--texte de la page events -->
 <!--<aside>-->
     <!--<p>Events</p>-->
 <!--</aside>-->
->>>>>>> origin/master
+
 
         <footer>
             <nav>
