--- a/gallerie_lutteur.html
+++ b/gallerie_lutteur.html
@@ -2,24 +2,10 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
     <head>
         <meta charset="UTF-8">
-        <title>Gallerie des lutteurs</title>
-        <!--LIEN CSS-->
-        <link rel="stylesheet" href="css/maincss.css">
-        <!--LIEN TYPOS-->
+        <title>Gallerie Luchador</title>
+        <link rel="stylesheet" type="text/css" href="Css/MainCss.css">
         <link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
-        <link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
-        <!--LIEN FAVICON-->
-        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="author" content="Projet ISI : HTML5" />
-        <meta name="description" content="lucha libre, catch, mexique, luchiadore, lutteur" />
-        <meta name="robots" content="index" />
-
-        <!--/****VERSIONS ANTERIEURES IE9****/-->
-        <!--<link rel="stylesheet" href="css/fixe.css"/>-->
-        <!--[if lt IE 9]>
-        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
     </head>
 
     <body id="bck_lutteurs">
