Ajout ALT HEAER

--- a/details_luchador_2.html
+++ b/details_luchador_2.html
@@ -26,7 +26,7 @@
         <audio autoplay src="music/voice2.wav"> </audio>
 
         <header>
-            <a href="index.html"><img src="image/logo-solo.png"></a>
+            <a href="index.html"><img src="image/logo-solo.png" alt="logo"></a>
             <nav>
                 <ul>
                     <li><a href="gallerie_lutteur.html">Luchadores</a></li>
