--- a/infos.html
+++ b/infos.html
@@ -24,7 +24,7 @@
 
     <body id="infos">
         <header>
-            <a href="index.html"><img src="image/logo-solo.png"></a>
+            <a href="index.html"><img src="image/logo-solo.png" alt="logo"></a>
             <nav>
                 <ul>
                     <li><a href="gallerie_lutteur.html">Luchadores</a></li>
