--- a/details_luchador_1.html
+++ b/details_luchador_1.html
@@ -27,7 +27,7 @@
         <audio autoplay src="music/voice1.wav"></audio>
 
         <header>
-            <a href="index.html"><img src="image/logo-solo.png"></a>
+            <a href="index.html"><img src="image/logo-solo.png" alt="logo"></a>
             <nav>
                 <ul>
                     <li><a href="gallerie_lutteur.html">Luchadores</a></li>
