--- a/infos.html
+++ b/infos.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Informations</title>
         <!--LIEN CSS-->
-        <link rel="stylesheet" href="css/maincss.css">
+        <link rel="stylesheet" href="css/MainCss.css">
         <!--LIEN TYPOS-->
         <link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
